# vdosumry

./: .gitignore  MIT-LICENSE.txt  README.md  pyproject.toml
locales/: README.md  vdosumry.pot
locales/zh_TW/LC_MESSAGES/: vdosumry.mo  vdosumry.po
tests/: test_text_translator.py
vdosumry/: __init__.py  audio_transcriber.py  file_manager.py  main.py  text_summarizer.py  text_translator.py  video_downloader.py
vdosumry/llm/: base.py  ollama.py
